# stress-strain-app

./: AGENTS.md  main.py  pyproject.toml
.claude/: CLAUDE.md  settings.local.json
.claude/rules/: analysis-coding.md  environment.md  github-actions.md  knowledge-management.md  multi-agent.md  permissions.md  progress-tracking.md  project-info.md  python-coding.md  testing-guidlines.md  workflow.md
.claude/rules/kaggle/: operations.md
.claude/skills/create-experiment/: SKILL.md
.claude/skills/hpc-helper/: SKILL.md
.claude/skills/summarize-discussion/: SKILL.md
.github/workflows/: kaggle-module-update.yml
backend/: pyproject.toml
backend/app/: main.py
backend/app/analysis/: converter.py  fracture.py  toughness.py  uts.py  yield_strength.py  youngs_modulus.py
backend/app/api/routers/: analyses.py  datasets.py  exports.py
backend/app/core/: config.py  errors.py
backend/app/domain/: enums.py  mechanical_props.py  specimen.py
backend/app/io/: csv_parser.py
backend/app/schemas/: analysis.py  dataset.py  export.py
backend/app/services/: analysis_service.py  dataset_service.py
backend/app/utils/: unit_converter.py
backend/tests/: conftest.py  test_analysis_service.py  test_csv_parser.py  test_yield_strength.py  test_youngs_modulus.py
backend/tests/fixtures/: sample_load_disp.csv  sample_steel.csv
frontend/: package-lock.json  package.json
reference/progress/: dashboard.md  experiment_log.md  implementation_log.md  plan.md
reference/strategy/: stress_strain_app_requirement_0318.md
scripts/: sync_obsidian_progress.sh
(+19 files in other folders)
